fix bug in bulk actions where the edit ticket wouldn't work if no assignee was chosen. Also fixed bug where the add ticket form was not re-populating with previously chosen values. Increase select height slightly to prevent cut off text

--- a/client/src/styles/common.css
+++ b/client/src/styles/common.css
@@ -263,7 +263,7 @@ select {
   cursor: pointer;
   outline: none;
   width: 100%;
-  height: 40px;
+  height: 43px;
   min-height: 40px;
   line-height: normal;
 
